<resources>
    <string name="app_name">moviecentre</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">Enter a password of length greater than 5</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="action_register">Register</string>
    <string name="action_sign_up">Dont have an account? Sign up</string>
    <string name="already_registered">Already Registered ? Click to Log in</string>
    already_registered
    <string name="large_text">
        "Movies: \n\n"
    </string>
    <string name="movie_poster">Movie Poster</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_logout">Log Out</string>
    <string name="title_activity_home">Films in Theaters</string>
    <string name="nowPlaying">Now Playing</string>
    <string name="topRated">Top Rated</string>
    <string name="upComing">Up Coming</string>
    <string name="recommended">Recommended</string>
    <string name="section_format">Place Movie posters here !!</string>
    <string name="placeholder">Placeholder</string>
    <string name="reviews">Reviews</string>
</resources>
